--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
     <head>
         <meta charset="utf-8">
         <title>Fábio Faúndes</title>
-        <link rel="stylesheet" type="text/css" href="fullPage.js-master/src/fullpage.css">        
+        <link rel="stylesheet" type="text/css" href="fullPage.js-master/src/fullpage.css">       
+        <link rel="stylesheet" type="text/css" href="portfolio.css">
     </head>
     <body>
         
         <div id="fullpage">
-            <div class="section">Section 1</div>
+            <div class="section">
+                <h1 class="title pacifico text-pop-up-top">
+                    Fábio Faúndes
+                </h1>
+                <div class="arrow bounce"></div>
+            </div>
             <div class="section">
                 <div class="slide">Slide 2.1</div>
                 <div class="slide">Slide 2.2</div>
@@ -21,7 +27,7 @@
         <script> 
             $(document).ready(function() { $('#fullpage').fullpage(); });
             new fullpage('#fullpage', {
-              sectionsColor: ['yellow', 'orange', '#C0C0C0', '#ADD8E6'],
+              sectionsColor: ['#333333', 'orange', '#C0C0C0', '#ADD8E6'],
             });
         </script>
     </body>
