Ajustes no Titulo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         
         <div id="fullpage">
             <div class="section">
-                <h1 class="title pacifico text-pop-up-top">
-                    Fábio Faúndes
-                </h1>
+                <div class="title pacifico text-pop-up-top">
+                    <h1 id="part1">Fábio</h1>
+                    <h1 id="part2">Faúndes</h1>
+                </div>
                 <div class="arrow bounce"></div>
             </div>
             <div class="section">
