--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
                 <div class="slide" id="slide2">
                     <div>
                         <h2 class="m-title oleo">Snake Game</h2>
+                        <p class="noto">
+                            Jogo simples e clássico feito para Web. Desenvolvido em JavaScript.
+                        </p>
+                        <p class="noto">
+                            <a target="_blank" href="https://github.com/Fabio-Faundes/Snake-Game.git">
+                                https://github.com/Fabio-Faundes/Snake-Game.git
+                            </a>
+                        </p>                        
                     </div>
+                    <img src="images/snake.png">
                 </div>
                 <div class="slide" id="slide3"></div>
             </div>
