Dois projetos concluídos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="section" id="projetos">
                 <div class="slide" id="slide1">                    
-                        <h2 class="m-title oleo">Projetos e Formação</h2>                    
+                        <h2 class="m-title oleo">Projetos</h2>                    
                 </div>
                 <div class="slide" id="slide2">
                     <div>
@@ -44,7 +44,18 @@
                     </div>
                     <img src="images/snake.png">
                 </div>
-                <div class="slide" id="slide3"></div>
+                <div class="slide" id="slide3">
+                    <div>
+                        <h2 class="m-title oleo">Daltonik</h2>
+                        <p class="noto">Aplicativo Android para Auxílio de daltônicos. Inclui três funcionalidades:</p>
+                        <ol class="noto">
+                            <li>"Tradutor de Mapas"</li>
+                            <li>"Filtro de Cores"</li>
+                            <li>"Nomeador de Cores"</li>
+                        </ol>
+                    </div>                    
+                    <img src="images/daltonik.png">
+                </div>
             </div>
             <div class="section" id="sonho">
                 <div class="circle">
